--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Salsa&display=swap');
 body{
     margin: 0px;
+    font-family: 'Roboto mono';
 }
 .cabecalho{
     background-image: url("imagens/fundo-header.jpg");
@@ -13,6 +15,8 @@ body{
     margin-bottom: 0px;
     margin-left: auto;
     text-align: center;
+    padding-top:20px;
+    padding-bottom: 22px;
 }
     .logo{
         width: 170px;
@@ -27,4 +31,10 @@ body{
         font-size: 60px;
         color: #F36444;
         line-height: 100%;
+        font-family: 'Salsa';
+        font-weight: 600;
     }
+    .texto-piqueno{
+        font-size: 28px;
+    }
+    
