--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Salsa&display=swap');
-body{
+
+    body{
     margin: 0px;
     font-family: 'Roboto mono';
-}
-.cabecalho{
+    }
+
+    .cabecalho{
     background-image: url("imagens/fundo-header.jpg");
     background-repeat: no-repeat;
     background-position-x: center;
@@ -17,7 +19,8 @@ body{
     text-align: center;
     padding-top:20px;
     padding-bottom: 22px;
-}
+    }
+
     .logo{
         width: 170px;
         height: 170px;
@@ -27,6 +30,7 @@ body{
         padding: 10px;
         border-radius: 100px;
     }
+
     .nome-loja{
         font-size: 60px;
         color: #F36444;
@@ -37,4 +41,19 @@ body{
     .texto-piqueno{
         font-size: 28px;
     }
-    
+
+    .menu{
+        background-color: #FB6066;
+        width: 1200px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        padding-top: 19px;
+        padding-bottom: 19px;
+        color: #FDD86E;
+    }
+    .item-menu{
+        color: #FDD86E;
+        font-size: 18px;
+        font-weight: 500;
+    }
