--- a/estilos.css
+++ b/estilos.css
@@ -132,8 +132,9 @@
         font-size: 20px;
     }
     hr{
-        background-color: #cc9a9c;
-        border-bottom: 10px solid #FB6066;
+        background-color: #FB6066;
+        border: 10px solid #FB6066;
+
     }
     .rodape{
         text-align: center;
