ajuste da fonte do rodapé

--- a/estilos.css
+++ b/estilos.css
@@ -139,7 +139,7 @@
     .rodape{
         text-align: center;
         color: #F36444;
-        font-family: 'roboto mono';
+        font-family: 'salsa';
         font-size: 20px; 
     }
     .midias{
